# thp-demo

./: README.md  pyproject.toml
A-NSHM_v1.0.4/: hazard-NSHM_v.1.04.toml  hazard.toml
B-highest_weight/: gmcm-highest_weight.json  hazard-highest_weight.toml  srm-highest_weight.json
C-crustal_only/: gmcm-crustal_only.json  hazard-crustal_only.toml  srm-crustal_only.json
models/A-NSHM_v1.0.4/: gmcm-NSHM_v1.0.4.json  hazard-NSHM_v.1.04.toml
models/B-highest_weight/: hazard-highest_weight.toml
models/C-crustal_only/: hazard-crustal_only.toml
scripts/: demo_thp_v2.py
thp_demo/: curves_v4.py  data_functions.py  plotting_functions.py
